add get-policy method
